@@ -781,6 +781,242 @@ jtag_device_def_type deviceDefinitions[] = {
 	    fill_b2(0x1f),		// EECRAddress
 	},
     },
+
+    // DEV_ATMEGA325
+    {
+	"atmega325",
+	0x9505,
+	128, 256,	// 32768 bytes flash
+	4, 256,	// 1024 bytes EEPROM
+	22 * 4,	// 22 interrupt vectors
+	DEVFL_MKII_ONLY,
+	NULL,	// registers not yet defined
+	{
+	    0	// no mkI support
+	},
+	{
+	    CMND_SET_DEVICE_DESCRIPTOR,
+	    { 0xFF,0xFF,0xFF,0xF0,0xDF,0x3C,0xB9,0xE0 }, // ucReadIO
+	    { 0X00,0X00,0X00,0X00,0X00,0X00,0X00,0X00 }, // ucReadIOShadow
+	    { 0xB6,0x6D,0x1B,0xE0,0xDF,0x1C,0xB8,0xE0 }, // ucWriteIO
+	    { 0X00,0X00,0X00,0X00,0X00,0X00,0X00,0X00 }, // ucWriteIOShadow
+	    { 0x53,0xDA,0x01,0xDF,0xF7,0x0F,0x00,0x00,
+	      0x00,0x00,0x4D,0x07,0x37,0x00,0x00,0x00,
+	      0x00,0x00,0x00,0x00 }, // ucReadExtIO
+	    { 0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
+	      0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
+	      0x00,0x00,0x00,0x00 }, // ucReadIOExtShadow
+	    { 0x53,0xDA,0x01,0xD8,0xF7,0x0F,0x00,0x00,
+	      0x00,0x00,0x4D,0x05,0x36,0x00,0x00,0x00,
+	      0x00,0x00,0x00,0x00 }, // ucWriteExtIO
+	    { 0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
+	      0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
+	      0x00,0x00,0x00,0x00 }, // ucWriteIOExtShadow
+	    0x31,	// ucIDRAddress
+	    0x57,	// ucSPMCRAddress
+	    0,	// ucRAMPZAddress
+	    fill_b2(128),	// uiFlashPageSize
+	    4,	// ucEepromPageSize
+	    fill_b4(0x3F00),	// ulBootAddress
+	    fill_b2(0xC6),	// uiUpperExtIOLoc
+	    fill_b4(32768),	// ulFlashSize
+	    { 0x00 },	// ucEepromInst
+	    { 0x00 },	// ucFlashInst
+	    0x3E,	// ucSPHaddr
+	    0x3D,	// ucSPLaddr
+	    fill_b2(32768 / 128),	// uiFlashpages
+	    0x00,	// ucDWDRAddress
+	    0x40,	// ucDWBasePC
+	    0x00,	// ucAllowFullPageBitstream
+	    fill_b2(0x00),	// uiStartSmallestBootLoaderSection
+	    1,	// EnablePageProgramming
+	    0,	// ucCacheType
+	    fill_b2(0x100),	// uiSramStartAddr
+	    0,	// ucResetType
+	    0,	// ucPCMaskExtended
+	    0x40,	// ucPCMaskHigh
+	    0,	// ucEindAddress
+	    0x1F,	// EECRAddress
+	},
+    },
+
+
+    // DEV_ATMEGA3250
+    {
+	"atmega3250",
+	0x9506,
+	128, 256,	// 32768 bytes flash
+	4, 256,	// 1024 bytes EEPROM
+	25 * 4,	// 25 interrupt vectors
+	DEVFL_MKII_ONLY,
+	NULL,	// registers not yet defined
+	{
+	    0	// no mkI support
+	},
+	{
+	    CMND_SET_DEVICE_DESCRIPTOR,
+	    { 0xFF,0xFF,0xFF,0xF0,0xDF,0x3C,0xB9,0xE0 }, // ucReadIO
+	    { 0X00,0X00,0X00,0X00,0X00,0X00,0X00,0X00 }, // ucReadIOShadow
+	    { 0xB6,0x6D,0x1B,0xE0,0xDF,0x1C,0xB8,0xE0 }, // ucWriteIO
+	    { 0X00,0X00,0X00,0X00,0X00,0X00,0X00,0X00 }, // ucWriteIOShadow
+	    { 0x53,0xFA,0x09,0xDF,0xF7,0x0F,0x00,0x00,
+	      0x00,0x00,0x4D,0x07,0x37,0x00,0x00,0x3F,
+	      0x00,0x00,0x00,0x00 }, // ucReadExtIO
+	    { 0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
+	      0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
+	      0x00,0x00,0x00,0x00 }, // ucReadIOExtShadow
+	    { 0x53,0xFA,0x09,0xD8,0xF7,0x0F,0x00,0x00,
+	      0x00,0x00,0x4D,0x05,0x36,0x00,0x00,0x3F,
+	      0x00,0x00,0x00,0x00 }, // ucWriteExtIO
+	    { 0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
+	      0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
+	      0x00,0x00,0x00,0x00 }, // ucWriteIOExtShadow
+	    0x31,	// ucIDRAddress
+	    0x57,	// ucSPMCRAddress
+	    0,	// ucRAMPZAddress
+	    fill_b2(128),	// uiFlashPageSize
+	    4,	// ucEepromPageSize
+	    fill_b4(0x3F00),	// ulBootAddress
+	    fill_b2(0xDD),	// uiUpperExtIOLoc
+	    fill_b4(32768),	// ulFlashSize
+	    { 0x00 },	// ucEepromInst
+	    { 0x00 },	// ucFlashInst
+	    0x3E,	// ucSPHaddr
+	    0x3D,	// ucSPLaddr
+	    fill_b2(32768 / 128),	// uiFlashpages
+	    0x00,	// ucDWDRAddress
+	    0x40,	// ucDWBasePC
+	    0x00,	// ucAllowFullPageBitstream
+	    fill_b2(0x00),	// uiStartSmallestBootLoaderSection
+	    1,	// EnablePageProgramming
+	    0,	// ucCacheType
+	    fill_b2(0x100),	// uiSramStartAddr
+	    0,	// ucResetType
+	    0,	// ucPCMaskExtended
+	    0x40,	// ucPCMaskHigh
+	    0,	// ucEindAddress
+	    0x1F,	// EECRAddress
+	},
+    },
+
+
+    // DEV_ATMEGA645
+    {
+	"atmega645",
+	0x9605,
+	256, 256,	// 65536 bytes flash
+	8, 256,	// 2048 bytes EEPROM
+	22 * 4,	// 22 interrupt vectors
+	DEVFL_MKII_ONLY,
+	NULL,	// registers not yet defined
+	{
+	    0	// no mkI support
+	},
+	{
+	    CMND_SET_DEVICE_DESCRIPTOR,
+	    { 0xFF,0xFF,0xFF,0xF0,0xDF,0x3C,0xB9,0xE0 }, // ucReadIO
+	    { 0X00,0X00,0X00,0X00,0X00,0X00,0X00,0X00 }, // ucReadIOShadow
+	    { 0xB6,0x6D,0x1B,0xE0,0xDF,0x1C,0xB8,0xE0 }, // ucWriteIO
+	    { 0X00,0X00,0X00,0X00,0X00,0X00,0X00,0X00 }, // ucWriteIOShadow
+	    { 0x53,0xDA,0x01,0xDF,0xF7,0x0F,0x00,0x00,
+	      0x00,0x00,0x4D,0x07,0x37,0x00,0x00,0x00,
+	      0x00,0x00,0x00,0x00 }, // ucReadExtIO
+	    { 0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
+	      0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
+	      0x00,0x00,0x00,0x00 }, // ucReadIOExtShadow
+	    { 0x53,0xDA,0x01,0xD8,0xF7,0x0F,0x00,0x00,
+	      0x00,0x00,0x4D,0x05,0x36,0x00,0x00,0x00,
+	      0x00,0x00,0x00,0x00 }, // ucWriteExtIO
+	    { 0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
+	      0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
+	      0x00,0x00,0x00,0x00 }, // ucWriteIOExtShadow
+	    0x31,	// ucIDRAddress
+	    0x57,	// ucSPMCRAddress
+	    0,	// ucRAMPZAddress
+	    fill_b2(256),	// uiFlashPageSize
+	    8,	// ucEepromPageSize
+	    fill_b4(0x7E00),	// ulBootAddress
+	    fill_b2(0xC6),	// uiUpperExtIOLoc
+	    fill_b4(65536),	// ulFlashSize
+	    { 0x00 },	// ucEepromInst
+	    { 0x00 },	// ucFlashInst
+	    0x3E,	// ucSPHaddr
+	    0x3D,	// ucSPLaddr
+	    fill_b2(65536 / 256),	// uiFlashpages
+	    0x00,	// ucDWDRAddress
+	    0x40,	// ucDWBasePC
+	    0x00,	// ucAllowFullPageBitstream
+	    fill_b2(0x00),	// uiStartSmallestBootLoaderSection
+	    1,	// EnablePageProgramming
+	    0,	// ucCacheType
+	    fill_b2(0x100),	// uiSramStartAddr
+	    0,	// ucResetType
+	    0,	// ucPCMaskExtended
+	    0x00,	// ucPCMaskHigh
+	    0,	// ucEindAddress
+	    0x1F,	// EECRAddress
+	},
+    },
+
+
+    // DEV_ATMEGA6450
+    {
+	"atmega6450",
+	0x9606,
+	256, 256,	// 65536 bytes flash
+	8, 256,	// 2048 bytes EEPROM
+	25 * 4,	// 25 interrupt vectors
+	DEVFL_MKII_ONLY,
+	NULL,	// registers not yet defined
+	{
+	    0	// no mkI support
+	},
+	{
+	    CMND_SET_DEVICE_DESCRIPTOR,
+	    { 0xFF,0xFF,0xFF,0xF0,0xDF,0x3C,0xB9,0xE0 }, // ucReadIO
+	    { 0X00,0X00,0X00,0X00,0X00,0X00,0X00,0X00 }, // ucReadIOShadow
+	    { 0xB6,0x6D,0x1B,0xE0,0xDF,0x1C,0xB8,0xE0 }, // ucWriteIO
+	    { 0X00,0X00,0X00,0X00,0X00,0X00,0X00,0X00 }, // ucWriteIOShadow
+	    { 0x53,0xFA,0x09,0xDF,0xF7,0x0F,0x00,0x00,
+	      0x00,0x00,0x4D,0x07,0x37,0x00,0x00,0x3F,
+	      0x00,0x00,0x00,0x00 }, // ucReadExtIO
+	    { 0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
+	      0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
+	      0x00,0x00,0x00,0x00 }, // ucReadIOExtShadow
+	    { 0x53,0xFA,0x09,0xD8,0xF7,0x0F,0x00,0x00,
+	      0x00,0x00,0x4D,0x05,0x36,0x00,0x00,0x3F,
+	      0x00,0x00,0x00,0x00 }, // ucWriteExtIO
+	    { 0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
+	      0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
+	      0x00,0x00,0x00,0x00 }, // ucWriteIOExtShadow
+	    0x31,	// ucIDRAddress
+	    0x57,	// ucSPMCRAddress
+	    0,	// ucRAMPZAddress
+	    fill_b2(256),	// uiFlashPageSize
+	    8,	// ucEepromPageSize
+	    fill_b4(0x7E00),	// ulBootAddress
+	    fill_b2(0xDD),	// uiUpperExtIOLoc
+	    fill_b4(65536),	// ulFlashSize
+	    { 0x00 },	// ucEepromInst
+	    { 0x00 },	// ucFlashInst
+	    0x3E,	// ucSPHaddr
+	    0x3D,	// ucSPLaddr
+	    fill_b2(65536 / 256),	// uiFlashpages
+	    0x00,	// ucDWDRAddress
+	    0x40,	// ucDWBasePC
+	    0x00,	// ucAllowFullPageBitstream
+	    fill_b2(0x00),	// uiStartSmallestBootLoaderSection
+	    1,	// EnablePageProgramming
+	    0,	// ucCacheType
+	    fill_b2(0x100),	// uiSramStartAddr
+	    0,	// ucResetType
+	    0,	// ucPCMaskExtended
+	    0x00,	// ucPCMaskHigh
+	    0,	// ucEindAddress
+	    0x1F,	// EECRAddress
+	},
+    },
+
     // DEV_ATMEGA329
     {
         "atmega329",
