@@ -7,6 +7,7 @@ New CPU support added:
 ----------------------
 
 . AT90PWM2B/AT90PWM3B (same as AT90PWM2/3 but different signature)
+. ATmega325/3250/645/6450
 
 New features added:
 -------------------
